--- a/ansible/consul-aws-bootstrap.yml
+++ b/ansible/consul-aws-bootstrap.yml
@@ -8,14 +8,14 @@
   become_user: root
   become: yes
   become_method: sudo
-  # strategy: debug  # just something to think about...
+  strategy: debug  # just something to think about...
 
   vars:
     - cache_valid_time: 600
-    - tmp_certs_path: "/tmp"
-    - vault_ssl_cert: "{{ lookup('file', '{{ tmp_certs_path }}/vault.crt.pem') }}"
-    - vault_ssl_ca_cert: "{{ lookup('file', '{{ tmp_certs_path }}/vault.ca.crt.pem') }}"
-    - vault_ssl_key: "{{ lookup('file', '{{ tmp_certs_path }}/vault.key.pem') }}"
+    - tmp_certs_path: "/etc/consul.d/ssl/"
+    - consul_ssl_cert: "{{ lookup('file', '{{ tmp_certs_path }}/{{ consul_ssl_cert_filename }}') }}"
+    - consul_ssl_ca_cert: "{{ lookup('file', '{{ tmp_certs_path }}/{{ consul_ssl_ca_cert_filename }}') }}"
+    - consul_ssl_key: "{{ lookup('file', '{{ tmp_certs_path }}/{{ consul_ssl_key_filename }}') }}"
     - register_with_zabbix: false
     - datacenter: 'need_a_value_to_look_up_here'
 
@@ -25,7 +25,7 @@
     - { role: common-packages, tags: role_common_packages }
     - { role: consul, tags: role_consul }
     - { role: td-agent, tags: role_td_agent }
-    - { role: ufw-firewall, tags: role_ufw_firewall } #, when: packer_builder_type is defined and packer_builder_type != 'docker' }
+    - { role: ufw-firewall, tags: role_ufw_firewall }
     - { role: security, tags: role_security }
     - { role: zabbix-agent, tags: role_zabbix_agent, when: register_with_zabbix }
 
