--- a/ansible/roles/supervisor/tasks/main.yml
+++ b/ansible/roles/supervisor/tasks/main.yml
@@ -28,6 +28,8 @@
 
 - name: Import configuration tasks
   include: config.yml
+  tags:
+    - always
 
 - name: Import tasks to set up supervisor service
   include: init-setup.yml
