--- a/ansible/vault-aws-bootstrap.yml
+++ b/ansible/vault-aws-bootstrap.yml
@@ -12,20 +12,20 @@
 
   vars:
     - cache_valid_time: 600
-    - tmp_certs_path: "/tmp"
-    - vault_ssl_cert: "{{ lookup('file', '{{ tmp_certs_path }}/vault.crt.pem') }}"
-    - vault_ssl_ca_cert: "{{ lookup('file', '{{ tmp_certs_path }}/vault.ca.crt.pem') }}"
-    - vault_ssl_key: "{{ lookup('file', '{{ tmp_certs_path }}/vault.key.pem') }}"
+    - tmp_certs_path: "{{ vault_config_path }}/ssl/"
+    - vault_ssl_cert: "{{ lookup('file', '{{ vault_ssl_crt_path }}') }}"
+    - vault_ssl_ca_cert: "{{ lookup('file', '{{ vault_ssl_ca_crt_path }}') }}"
+    - vault_ssl_key: "{{ lookup('file', '{{ vault_ssl_key_path }}') }}"
     - register_with_zabbix: false
     - datacenter: 'need_a_value_to_look_up_here'
-
+    - consul_run_as_server: false
 
   roles:
     - { role: ami-cleanup, tags: role_ami_cleanup }
     - { role: common-packages, tags: role_common_packages }
     - { role: vault, tags: role_vault }
     - { role: td-agent, tags: role_td_agent }
-    - { role: ufw-firewall, tags: role_ufw_firewall } #, when: packer_builder_type is defined and packer_builder_type != 'docker' }
+    - { role: ufw-firewall, tags: role_ufw_firewall }
     - { role: security, tags: role_security }
     - { role: zabbix-agent, tags: role_zabbix_agent, when: register_with_zabbix }
 
