More bootstrapping fixes

--- a/ansible/roles/vault/vars/bootstrap_aws_dev.yml
+++ b/ansible/roles/vault/vars/bootstrap_aws_dev.yml
@@ -1,5 +1,6 @@
 ---
-
+consul_run_as_server: false
+consul_retry_join: provider=aws region=us-east-1 key=consul-servers value=terraform-consul
 vault_supervisor_cmd_flags: '-config=/etc/vault.d/vault.hcl'
 supervisor_programs:
   - name: 'vault'
