--- a/ansible/vault-aws-bootstrap.yml
+++ b/ansible/vault-aws-bootstrap.yml
@@ -1,8 +1,6 @@
 ---
 
-# This playbook should configure a vault + consul image for use with packet, etc.
-
-- name: Vault Consul AMI
+- name: Vault AWS Bootstrap
   hosts: all
   connection: local
   become_user: root
@@ -19,6 +17,14 @@
     - register_with_zabbix: false
     - datacenter: 'need_a_value_to_look_up_here'
     - consul_run_as_server: false
+
+  pre_tasks:
+    - name: Display all variables/facts known when -v option is set
+      debug:
+        var: hostvars[inventory_hostname]
+        verbosity: 1
+      tags:
+        - bootstrap
 
   roles:
     - { role: ami-cleanup, tags: role_ami_cleanup }
