--- a/ansible/molecule/create.yml
+++ b/ansible/molecule/create.yml
@@ -45,7 +45,7 @@
         image: "molecule_local/{{ item.image }}"
         state: started
         recreate: False
-        log_driver: syslog
+        # log_driver: syslog
         command: "{{ item.command | default('sleep 1200') }}"
         privileged: "{{ item.privileged | default(omit) }}"
         volumes: "{{ item.volumes | default(omit) }}"
