--- a/ansible/roles/apt-update/tasks/main.yml
+++ b/ansible/roles/apt-update/tasks/main.yml
@@ -18,15 +18,17 @@
   changed_when: false
   tags: packages
   check_mode: no
+  tags:
+    - always
 
 - name: apt-get update
   apt:
     update_cache: yes
-  when: ansible_os_family == "Debian"
   register: result
   until: result.failed is not defined
   retries: 3
   delay: 30
   changed_when: false
   tags:
+    - always
     - packages
