--- a/ansible/roles/apt-update/tasks/main.yml
+++ b/ansible/roles/apt-update/tasks/main.yml
@@ -17,6 +17,7 @@
   delay: 10
   changed_when: false
   check_mode: no
+  run_once: true
   tags:
     - always
     - packages
@@ -29,6 +30,7 @@
   retries: 3
   delay: 30
   changed_when: false
+  run_once: true
   tags:
     - always
     - packages
