--- a/ansible/roles/vault/tasks/main.yml
+++ b/ansible/roles/vault/tasks/main.yml
@@ -66,17 +66,19 @@
     dest: /etc/ca-certificates.conf
     line: wpengine/vault_ca.crt
 
-- name: Check that vault binary has the ability to use the mlock syscall
-  command: setcap cap_ipc_lock=+ep {{ vault_bin_path }}
-  when: getcap_vault_bin.stdout != "/usr/local/bin/vault = cap_ipc_lock+ep"
-  tags:
-    - always
-
 - name: Enable the vault binary to use the mlock syscall when needed
-  command: getcap {{ vault_bin_path }}
+  command: getcap {{ vault_bin_path }}/vault
   register: getcap_vault_bin
   tags:
     - always
+    - skip_ansible_lint
+
+- name: Check that vault binary has the ability to use the mlock syscall
+  command: setcap cap_ipc_lock=+ep {{ vault_bin_path }}/vault
+  when: getcap_vault_bin.stdout != "/usr/local/bin/vault = cap_ipc_lock+ep"
+  tags:
+    - always
+    - skip_ansible_lint
 
 - name: Template vault config file at /etc/vault.d/vault.hcl
   template:
