--- a/ansible/roles/vault/tasks/main.yml
+++ b/ansible/roles/vault/tasks/main.yml
@@ -69,13 +69,14 @@
 - name: Enable the vault binary to use the mlock syscall when needed
   command: getcap {{ vault_bin_path }}/vault
   register: getcap_vault_bin
+  when: molecule_run is not defined
   tags:
     - always
     - skip_ansible_lint
 
 - name: Check that vault binary has the ability to use the mlock syscall
   command: setcap cap_ipc_lock=+ep {{ vault_bin_path }}/vault
-  when: getcap_vault_bin.stdout != "/usr/local/bin/vault = cap_ipc_lock+ep"
+  when: molecule_run is not defined and getcap_vault_bin.stdout != "/usr/local/bin/vault = cap_ipc_lock+ep"
   tags:
     - always
     - skip_ansible_lint
