--- a/ansible/roles/ami-cleanup/tasks/main.yml
+++ b/ansible/roles/ami-cleanup/tasks/main.yml
@@ -11,8 +11,12 @@
   register: ec2_metadata
   failed_when: false
   changed_when: false
+  tags:
+    - bootstrap
 
 - name: Set Hostname
   hostname:
     name: "{{ hostname_prefix }}-{{ ec2_metadata.ansible_facts.ansible_ec2_instance_id }}"
   when: hostname_prefix is defined and ec2_metadata is defined and 'ansible_facts' in ec2_metadata
+  tags:
+    - bootstrap
