Add credstash for quick bootstrapping

--- a/ansible/roles/common-packages/tasks/pip.yml
+++ b/ansible/roles/common-packages/tasks/pip.yml
@@ -9,6 +9,7 @@
   with_items:
     - {module: boto3, when: true}
     - {module: testinfra>=1.6.0, when: true}
+    - {module: credstash, when: true}
   tags:
     - pip
     - pip2
