Install ansible-modules-hashivault in vault role

--- a/ansible/roles/vault/tasks/install.yml
+++ b/ansible/roles/vault/tasks/install.yml
@@ -43,3 +43,8 @@
   run_once: true
   changed_when: false
   tags: installation
+
+- name: Install ansible-modules-hashivault for vault management tasks
+  pip:
+    name: ansible-modules-hashivault
+    state: present
