Vault initialization tasks

--- a/ansible/roles/vault/tasks/main.yml
+++ b/ansible/roles/vault/tasks/main.yml
@@ -92,3 +92,8 @@
     - 'Vault Restart'
   tags:
     - bootstrap
+
+- name: Initialize vault if needed
+  include: initialize.yml
+  tags:
+    - bootstrap
