Need modules installed before we can invoke ansible

--- a/packer/vault-consul-ami/vault-consul.yaml
+++ b/packer/vault-consul-ami/vault-consul.yaml
@@ -68,6 +68,7 @@ provisioners:
     inline:
       - DEBIAN_FRONTEND=noninteractive sudo apt install -y python-pip
       - sudo pip install ansible
+      - sudo pip install ansible-modules-hashivault
 
   # Ensure SSL secrets are available when running ansible. TODO: SSL storage should move to S3/KMS/Credstash?
   - type: file
